@@ -1,4 +1,4 @@
-$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.33 2004/11/18 11:17:33 ph10 Exp $
+$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.34 2004/11/19 09:45:54 ph10 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -141,6 +141,16 @@ Exim version 4.44
 35. If an IPv6 address is given for -bh or -bhc, it is now converted to the
     canonical form (fully expanded) before being placed in
     $sender_host_address.
+
+36. The table in the code that translates DNS record types into text (T_A to
+    "A" for instance) was missing entries for NS and CNAME. It is just possible
+    that this could have caused confusion if both these types were looked up
+    for the same domain, because the text type is used as part of Exim's
+    per-process caching. But the chance of anyone hitting this buglet seems
+    very small.
+
+37. The dnsdb lookup has a new type, "zns", which walks up the domain tree
+    until it finds some nameserver records. It should be used with care.
 
 
 Exim version 4.43
